feat: added link with icon

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,5 @@
 $css-color-white: #fff;
+$css-color-black: #000;
 $css-color-screen: #ebf5f8;
 $css-color-wash: #d8edf1;
 $css-color-ocean: #c5e4ea;
